refactor: Move CapMan logic to separate project.

--- a/CapMan.Raylib/CapMan.Raylib.csproj
+++ b/CapMan.Raylib/CapMan.Raylib.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Raylib-cs" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CapMan\CapMan.csproj" />
+  </ItemGroup>
+
 </Project>
