chore: Add blinkus.png to assets in csproj.

--- a/CapMan.Raylib/CapMan.Raylib.csproj
+++ b/CapMan.Raylib/CapMan.Raylib.csproj
@@ -51,6 +51,9 @@
     <Content Include="..\assets\sprites\walls.png" Link="assets\sprites\walls.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="..\assets\sprites\blinkus.png" Link="assets\sprites\blinkus.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
