--- a/CapMan.Raylib/CapMan.Raylib.csproj
+++ b/CapMan.Raylib/CapMan.Raylib.csproj
@@ -6,6 +6,32 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="fonts\alagard.png" />
+    <None Remove="fonts\alpha_beta.png" />
+    <None Remove="fonts\anonymous_pro_bold.ttf" />
+    <None Remove="fonts\custom_alagard.png" />
+    <None Remove="fonts\custom_jupiter_crash.png" />
+    <None Remove="fonts\custom_mecha.png" />
+    <None Remove="fonts\dejavu.fnt" />
+    <None Remove="fonts\dejavu.png" />
+    <None Remove="fonts\DotGothic16-Regular.ttf" />
+    <None Remove="fonts\DotGothic16-Regular_OFL.txt" />
+    <None Remove="fonts\jupiter_crash.png" />
+    <None Remove="fonts\KAISG.ttf" />
+    <None Remove="fonts\mecha.png" />
+    <None Remove="fonts\noto_cjk.fnt" />
+    <None Remove="fonts\noto_cjk.png" />
+    <None Remove="fonts\pixantiqua.fnt" />
+    <None Remove="fonts\pixantiqua.png" />
+    <None Remove="fonts\pixantiqua.ttf" />
+    <None Remove="fonts\pixelplay.png" />
+    <None Remove="fonts\romulus.png" />
+    <None Remove="fonts\setback.png" />
+    <None Remove="fonts\symbola.fnt" />
+    <None Remove="fonts\symbola.png" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Raylib-cs" Version="6.0.0" />
   </ItemGroup>
@@ -52,6 +78,75 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="..\assets\sprites\walls.png" Link="assets\sprites\walls.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\alagard.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\alpha_beta.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\anonymous_pro_bold.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\custom_alagard.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\custom_jupiter_crash.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\custom_mecha.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\dejavu.fnt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\dejavu.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\DotGothic16-Regular.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\DotGothic16-Regular_OFL.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\jupiter_crash.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\KAISG.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\mecha.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\noto_cjk.fnt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\noto_cjk.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\pixantiqua.fnt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\pixantiqua.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\pixantiqua.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\pixelplay.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\romulus.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\setback.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\symbola.fnt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\symbola.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
