--- a/CapMan.Raylib/CapMan.Raylib.csproj
+++ b/CapMan.Raylib/CapMan.Raylib.csproj
@@ -16,6 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
+  <Content Include="..\assets\sfx\dot.wav" Link="assets\sfx\dot.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="..\assets\sprites\blinkus.png" Link="assets\sprites\blinkus.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
