--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,4 +27,15 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test -p:CollectCoverage=true -p:CoverletOutputFormat=cobertura --no-build --verbosity normal
+    - name: ReportGenerator
+      uses: danielpalme/ReportGenerator-GitHub-Action@5.2.2
+      with:
+        reports: CapMan.Tests/coverage.cobertura.xml
+        targetdir: docs/coverage
+        reporttypes: MarkdownSummaryGithub
+    - name: Upload coverage report artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: Coverage Report
+        path: docs/coverage
