--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,8 +34,9 @@ jobs:
         reports: CapMan.Tests/coverage.cobertura.xml
         targetdir: docs/coverage
         reporttypes: MarkdownSummaryGithub
-    - name: Upload coverage report artifact
-      uses: actions/upload-artifact@v4
+    - name: Add Report to PR
+      uses: mshick/add-pr-comment@v2
+      if: always()
       with:
-        name: Coverage Report
-        path: docs/coverage
+        message-path: |
+          docs/coverage/*.md
