--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,40 +13,51 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+
+    - name: Checkout Repo
+      uses: actions/checkout@v4
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+
     - name: Restore dependencies
       run: dotnet restore
+
     - name: Check styling
       run: dotnet format style --verify-no-changes --verbosity diagnostic
+
     - name: Build
       run: dotnet build --no-restore
+
     - name: Test
       run: dotnet test -p:CollectCoverage=true -p:CoverletOutputFormat=cobertura --no-build --verbosity normal
+
     - name: Generate coverage report
       uses: danielpalme/ReportGenerator-GitHub-Action@5.2.2
-      if: ${{ github.event_name == 'pull_request' }}
       with:
         reports: CapMan.Tests/coverage.cobertura.xml
         targetdir: docs/coverage
         reporttypes: MarkdownSummaryGithub;Html
+
     - name: Save coverage artifact
       uses: actions/upload-artifact@v4
       with:
         name: coverage-report
         path: docs/coverage
+
   comment-report:
     if: ${{ github.event_name == 'pull_request' }}
     needs: build
     runs-on: ubuntu-latest
     steps:
+
     - name: Download report
       uses: actions/download-artifact@v4
       with:
           name: coverage-report
+
     - name: Add Report to PR
       uses: mshick/add-pr-comment@v2
       if: always()
